--- a/src/ShopBundle/Resources/views/User/show.html.twig
+++ b/src/ShopBundle/Resources/views/User/show.html.twig
@@ -11,20 +11,52 @@
             </tr>
             <tr>
                 <th>Username</th>
-                <td>{{ entity.userName }}</td>
+                <td>{{ entity.username }}</td>
             </tr>
             <tr>
                 <th>Password</th>
-                <td>{{ entity.passWord }}</td>
+                <td>{{ entity.password }}</td>
             </tr>
-            <tr>
-                <th>Passwordsalt</th>
-                <td>{{ entity.passwordSalt }}</td>
-            </tr>
+            {#
             <tr>
                 <th>Joined</th>
                 <td>{{ entity.joined|date('Y-m-d H:i:s') }}</td>
             </tr>
+            #}
+            <tr>
+                <th>Firstname</th>
+                <td>{{ entity.firstname }}</td>
+            </tr>
+            <tr>
+                <th>Lastnam</th>
+                <td>{{ entity.lastnam }}</td>
+            </tr>
+            <tr>
+                <th>Address</th>
+                <td>{{ entity.address }}</td>
+            </tr>
+            <tr>
+                <th>Housenr</th>
+                <td>{{ entity.housenr }}</td>
+            </tr>
+            <tr>
+                <th>Houseadd</th>
+                <td>{{ entity.houseadd }}</td>
+            </tr>
+            <tr>
+                <th>Phonenumber</th>
+                <td>{{ entity.phonenumber }}</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>{{ entity.email }}</td>
+            </tr>
+             {#
+            <tr>
+                <th>Countorders</th>
+                <td>{{ entity.countorders }}</td>
+            </tr>
+             #}
         </tbody>
     </table>
 
