--- a/src/ShopBundle/Resources/views/base.html.twig
+++ b/src/ShopBundle/Resources/views/base.html.twig
@@ -49,14 +49,18 @@
                     <nav>
                         <ul class="menu">
                             <li><a href="http://pizzatai.dev/app_dev.php/product">Home</a></li>
-                            <li><a href="menu.html">Menu</a></li>
+                            <li><a href="http://pizzatai.dev/app_dev.php/product/">Menu</a></li>
                             <li><a class="active" href="http://pizzatai.dev/app_dev.php/login">Login</a></li>
-                            <li><a href="shipping.html">Levering</a></li>
-                            <li><a href="faq.html">FAQ </a></li>
                             <li><a href="contact.html">Contact</a></li>
+                             <li>
+                        <img src="{{ asset('images/shopping.gif')}}" alt="" width="24" height="24" class="shopping" />
+                    <p>Shopping cart</p> <p><strong>0</strong> <span>items</span></p>
+                </li>
                         </ul>
                     </nav>
                 </div>
+
+               
             </div>
         </div>
         <div class="row-bot">
