final commit before project delivery, shooping cart 30% done

--- a/src/ShopBundle/Resources/views/Product/index.html.twig
+++ b/src/ShopBundle/Resources/views/Product/index.html.twig
@@ -11,7 +11,7 @@
         <div class="main">
             <div class="container">
             <img align="center" src="{{ asset('images/unitedpizza.jpeg') }}" alt="">
-            	<h3 class="prev-indent-bot">Onze pizza's, gratis geleverd in regio Antwerpen</h3>
+            	<h3 class="prev-indent-bot">Onze pizza's, gratis geleverd in regio Antwerpen en parking</h3>
                 <div >
 
                 {% for entity in entities %}
